--- a/source/SpaceshipGame/SpaceshipGame.vcxproj.filters
+++ b/source/SpaceshipGame/SpaceshipGame.vcxproj.filters
@@ -118,6 +118,9 @@
     <ClInclude Include="Views\MotorImpairment\View\MotorImpairmentHumanView.h">
       <Filter>Views\MotorImpairment\View</Filter>
     </ClInclude>
+    <ClInclude Include="Views\Blind\View\AudioHumanView.h">
+      <Filter>Views\Blind\View</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -169,6 +172,9 @@
     </ClCompile>
     <ClCompile Include="Views\MotorImpairment\View\MotorImpairmentHumanView.cpp">
       <Filter>Views\MotorImpairment\View</Filter>
+    </ClCompile>
+    <ClCompile Include="Views\Blind\View\AudioHumanView.cpp">
+      <Filter>Views\Blind\View</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
