Refactored and improved the player profiles.

--- a/source/Engine/Engine.vcxproj
+++ b/source/Engine/Engine.vcxproj
@@ -128,12 +128,18 @@
     <ClCompile Include="Core\Physics\Implementation\NullPhysics\NullPhysics.cpp" />
     <ClCompile Include="Core\Physics\IPhysics.cpp" />
     <ClCompile Include="Core\Physics\PhysicsMaterial.cpp" />
-    <ClCompile Include="Core\PlayerProfile\AuralPreferences.cpp" />
-    <ClCompile Include="Core\PlayerProfile\GameplayPreferences.cpp" />
-    <ClCompile Include="Core\PlayerProfile\GraphicalPreferences.cpp" />
-    <ClCompile Include="Core\PlayerProfile\InputPreferences.cpp" />
-    <ClCompile Include="Core\PlayerProfile\PlayerPreferences.cpp" />
-    <ClCompile Include="Core\PlayerProfile\PlayerProfiles.cpp" />
+    <ClCompile Include="Core\PlayerProfile\GameplaySettings\GameplaySettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\GeneralSettings\GeneralSettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\InputSettings\InputSettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\InputSettings\Subsystems\InputSubsystemSettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\OutputSettings\OutputSettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\OutputSettings\Subsystems\AuralSettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\OutputSettings\Subsystems\GraphicalSettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\OutputSettings\Subsystems\OutputSubsystemSettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\OutputSettings\TextSettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\OutputSettings\WindowSettings.cpp" />
+    <ClCompile Include="Core\PlayerProfile\PlayerProfile.cpp" />
+    <ClCompile Include="Core\PlayerProfile\PlayerProfileManager.cpp" />
     <ClCompile Include="Core\Scene\CameraNode.cpp" />
     <ClCompile Include="Core\Scene\ICameraRenderer.cpp" />
     <ClCompile Include="Core\Scene\Implementation\Ogre3D\OgreCamera.cpp" />
@@ -319,12 +325,18 @@
     <ClInclude Include="Core\Physics\Implementation\NullPhysics\NullPhysics.h" />
     <ClInclude Include="Core\Physics\IPhysics.h" />
     <ClInclude Include="Core\Physics\PhysicsMaterial.h" />
-    <ClInclude Include="Core\PlayerProfile\AuralPreferences.h" />
-    <ClInclude Include="Core\PlayerProfile\GameplayPreferences.h" />
-    <ClInclude Include="Core\PlayerProfile\GraphicalPreferences.h" />
-    <ClInclude Include="Core\PlayerProfile\InputPreferences.h" />
-    <ClInclude Include="Core\PlayerProfile\PlayerPreferences.h" />
-    <ClInclude Include="Core\PlayerProfile\PlayerProfiles.h" />
+    <ClInclude Include="Core\PlayerProfile\GameplaySettings\GameplaySettings.h" />
+    <ClInclude Include="Core\PlayerProfile\GeneralSettings\GeneralSettings.h" />
+    <ClInclude Include="Core\PlayerProfile\InputSettings\InputSettings.h" />
+    <ClInclude Include="Core\PlayerProfile\InputSettings\Subsystems\InputSubsystemSettings.h" />
+    <ClInclude Include="Core\PlayerProfile\OutputSettings\OutputSettings.h" />
+    <ClInclude Include="Core\PlayerProfile\OutputSettings\Subsystems\AuralSettings.h" />
+    <ClInclude Include="Core\PlayerProfile\OutputSettings\Subsystems\GraphicalSettings.h" />
+    <ClInclude Include="Core\PlayerProfile\OutputSettings\Subsystems\OutputSubsystemSettings.h" />
+    <ClInclude Include="Core\PlayerProfile\OutputSettings\TextSettings.h" />
+    <ClInclude Include="Core\PlayerProfile\OutputSettings\WindowSettings.h" />
+    <ClInclude Include="Core\PlayerProfile\PlayerProfile.h" />
+    <ClInclude Include="Core\PlayerProfile\PlayerProfileManager.h" />
     <ClInclude Include="Core\Scene\CameraNode.h" />
     <ClInclude Include="Core\Scene\ICameraRenderer.h" />
     <ClInclude Include="Core\Scene\Implementation\Ogre3D\OgreCamera.h" />
